added play and stop feature

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,7 @@
 <h1>Salut</h1>
 <p onclick="myFunction(this, 'red')">Click me to change my text color.</p>
 <a href='/test'>Testyut</a>
+<a href='/stop'>STOP</a>
 <script>
 function myFunction(elmnt,clr) {
   elmnt.style.color = clr;
