Added volume function and fixed a lot bugs in server.js

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -51,6 +51,11 @@
             <p class="paragraph" style="min-height: 10px"> <!--width: 50px; -->
                 <%= playerstatus %>
               </p>
+              <p class="paragraph" style="min-height: 10px"> <!--width: 50px; -->
+                <%= currentvolume %>
+              </p>
+              <a href="/down"><i class="icon fas fa-volume-down" href="/down" style="color: #A7A7A7;"></i></a>
+              <a href="/up"><i class="icon fas fa-volume-up" href="/down" style="color: #A7A7A7;"></i></a>
           <!-- <i class="icon fa fa-envelope"></i>
           <i class="icon fa fa-image"></i>
           <i class="icon fa fa-share-square"></i> -->
