Updated the discord link from front-end

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -46,7 +46,7 @@
     <div class="navigation-footer">
         <!-- <i class="icon fa fa-bars"></i> --buton -->
         <a href="https://discord.gg/"><i class="icon fab fa-discord" href="https://discord.gg/" style="color: #A7A7A7;"></i></a>
-        <a href="/stop"><i class="icon fa fa-pause" href="https://discord.gg/" style="color: #A7A7A7;"></i></a>
+        <a href="/stop"><i class="icon fa fa-pause" href="https://discord.gg/c6EXUwN" style="color: #A7A7A7;"></i></a>
         <div class="row" style="flex-grow: 0; min-width: 50px; min-height: 50px">
             <p class="paragraph" style="min-height: 10px"> <!--width: 50px; -->
                 <%= playerstatus %>
