--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,66 +1,87 @@
 <!doctype html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="x-ua-compatible" content="ie=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" integrity="sha256-l85OmPOjvil/SOvVt3HnSSjzF1TUMyT9eV0c2BzEGzU=" crossorigin="anonymous" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css" integrity="sha256-+N4/V/SbAFiW1MPBCXnfnP9QSN3+Keu+NlB+0ev/YKQ=" crossorigin="anonymous" />
+<head>
+  <meta charset="utf-8" />
+  <meta http-equiv="x-ua-compatible" content="ie=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:400&display=swap" rel="stylesheet" />
-    <link href="https://fonts.googleapis.com/css?family=Cormorant:400&display=swap" rel="stylesheet" />
-    <link href="https://fonts.googleapis.com/css?family=Roboto:400&display=swap" rel="stylesheet" />
-    <link href="https://fonts.googleapis.com/css?family=Playfair Display:400&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
+    integrity="sha256-l85OmPOjvil/SOvVt3HnSSjzF1TUMyT9eV0c2BzEGzU=" crossorigin="anonymous" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css"
+    integrity="sha256-+N4/V/SbAFiW1MPBCXnfnP9QSN3+Keu+NlB+0ev/YKQ=" crossorigin="anonymous" />
+  <title>Dashboard - Zerox Media Player</title>
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:400&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css?family=Cormorant:400&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css?family=Roboto:400&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css?family=Playfair Display:400&display=swap" rel="stylesheet" />
 
-    <link href="css/style.css" type="text/css" rel="stylesheet" />
-  </head>
-  <body>
+  <link href="css/style.css" type="text/css" rel="stylesheet" />
+</head>
+
+<body>
   <div class="main" style="justify-content: flex-start; align-items: center">
-    <div class="row" style="justify-content: center; flex-grow: 0; min-width: 50px; min-height: 50px"><p class="paragraph" style="min-height: 10px"> <!--width: 70px;-->
+    <div class="row" style="justify-content: center; flex-grow: 0; min-width: 50px; min-height: 50px">
+      <p class="paragraph" style="min-height: 10px">
+        <!--width: 70px;-->
         Zerox Media Player
       </p>
     </div>
     <div class="row" style="min-width: 50px; min-height: 50px">
-      <a href="/radio1"><div class="image" style="width: 60px; height: 60px; background-image: url(/img/buton.png); color: #fff;">
-        <p class="paragraph" style="width: 50px; min-height: 10px">
+      <a href="/radio1">
+        <div class="image" style="width: 60px; height: 60px; background-image: url(/img/buton.png); color: #fff;">
+          <p class="paragraph" style="width: 50px; min-height: 10px">
             <%= radio1namefront %>
-      </p></div></a>
-      <a href="/radio2"><div class="image" style="width: 60px; height: 60px; background-image: url(/img/buton.png); color: #fff;">
-        <p class="paragraph" style="width: 50px; min-height: 10px">
+          </p>
+        </div>
+      </a>
+      <a href="/radio2">
+        <div class="image" style="width: 60px; height: 60px; background-image: url(/img/buton.png); color: #fff;">
+          <p class="paragraph" style="width: 50px; min-height: 10px">
             <%= radio2namefront %>
-      </p></div></a>
-      <a href="/radio3"><div class="image" style="width: 60px; height: 60px; background-image: url(/img/buton.png); color: #fff;">
-        <p class="paragraph" style="width: 50px; min-height: 10px">
+          </p>
+        </div>
+      </a>
+      <a href="/radio3">
+        <div class="image" style="width: 60px; height: 60px; background-image: url(/img/buton.png); color: #fff;">
+          <p class="paragraph" style="width: 50px; min-height: 10px">
             <%= radio3namefront %>
-      </p></div></a>
-      <a href="/radio4"><div class="image" style="width: 60px; height: 60px; background-image: url(/img/buton.png); color: #fff;">
-        <p class="paragraph" style="width: 50px; min-height: 10px">
+          </p>
+        </div>
+      </a>
+      <a href="/radio4">
+        <div class="image" style="width: 60px; height: 60px; background-image: url(/img/buton.png); color: #fff;">
+          <p class="paragraph" style="width: 50px; min-height: 10px">
             <%= radio4namefront %>
-      </p></div></a>
-      <a href="/radio5"><div class="image" style="width: 60px; height: 60px; background-image: url(/img/buton.png); color: #fff;">
-        <p class="paragraph" style="width: 50px; min-height: 10px">
+          </p>
+        </div>
+      </a>
+      <a href="/radio5">
+        <div class="image" style="width: 60px; height: 60px; background-image: url(/img/buton.png); color: #fff;">
+          <p class="paragraph" style="width: 50px; min-height: 10px">
             <%= radio5namefront %>
-      </p></div></a>
+          </p>
+        </div>
+      </a>
     </div>
     <div class="navigation-footer">
-        <!-- <i class="icon fa fa-bars"></i> --buton -->
-        <a href="https://discord.gg/"><i class="icon fab fa-discord" href="https://discord.gg/" style="color: #A7A7A7;"></i></a>
-        <a href="/stop"><i class="icon fa fa-pause" href="https://discord.gg/c6EXUwN" style="color: #A7A7A7;"></i></a>
-        <div class="row" style="flex-grow: 0; min-width: 50px; min-height: 50px">
-            <p class="paragraph" style="min-height: 10px"> <!--width: 50px; -->
-                <%= playerstatus %>
-              </p>
-              <p class="paragraph" style="min-height: 10px"> <!--width: 50px; -->
-                <%= currentvolume %>
-              </p>
-              <a href="/down"><i class="icon fas fa-volume-down" href="/down" style="color: #A7A7A7;"></i></a>
-              <a href="/up"><i class="icon fas fa-volume-up" href="/down" style="color: #A7A7A7;"></i></a>
-          <!-- <i class="icon fa fa-envelope"></i>
-          <i class="icon fa fa-image"></i>
-          <i class="icon fa fa-share-square"></i> -->
-        </div>
+      <a href="https://discord.gg/c6EXUwN"><i class="icon fab fa-discord" style="color: #A7A7A7;"></i></a>
+      <a href="/youtube"><i class="icon fab fa-youtube" style="color: #A7A7A7;"></i></a>
+      <a href="/stop"><i class="icon fa fa-pause" href="https://discord.gg/c6EXUwN" style="color: #A7A7A7;"></i></a>
+      <div class="row" style="flex-grow: 0; min-width: 50px; min-height: 50px">
+        <p class="paragraph" style="min-height: 10px">
+          <!--width: 50px; -->
+          <%= playerstatus %>
+        </p>
+        <p class="paragraph" style="min-height: 10px">
+          <!--width: 50px; -->
+          <%= currentvolume %>
+        </p>
+        <a href="/down"><i class="icon fas fa-volume-down" href="/down" style="color: #A7A7A7;"></i></a>
+        <a href="/up"><i class="icon fas fa-volume-up" href="/down" style="color: #A7A7A7;"></i></a>
       </div>
+    </div>
   </div>
-  </body>
+</body>
+
 </html>
